# tea-data-loader

./: .gitignore  Cargo.toml  Makefile  config.toml
fac_analyse/: __init__.py  analysis.py  summary.py  utils.py
factor-macro/: Cargo.toml
factor-macro/src/: lib.rs  utils.rs
pyloader/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
pyloader/python/loader/: __init__.py  fac_analyse.py  fac_analyse.pyi  factors.py  group_by.py  loader.pyi  py_loader.py  rs_loader.py  rs_loader.pyi  utils.py
pyloader/python/loader/tests/: test_base.py
pyloader/src/: fac_analyse.rs  from_py.rs  group_by.rs  lib.rs  pyloader.rs  utils.rs  with_facs.rs  with_strategies.rs
pyloader/src/pyfactors/: agg.rs  map.rs  map.rs~  mod.rs
src/: configs.rs  enums.rs  export.rs  frame.rs  lib.rs  path_finder.rs  polars_ext.rs  prelude.rs  strategy_work.rs
src/fac_analyse/: analyse.rs  linspace.rs  mod.rs  summary.rs  utils.rs
src/factors/: base.rs  core_impls.rs  core_traits.rs  export.rs  macros.rs  mod.rs  param.rs  parse.rs  pl_fac_ext.rs  register.rs
src/factors/agg/: mod.rs
src/factors/factor_struct/: agg.rs  factor.rs  mod.rs
src/factors/factor_struct/methods/: abs.rs  compare.rs  corr.rs  cum_sum.rs  diff.rs  ewm.rs  iif.rs  log.rs  max.rs  min.rs  mod.rs  shift.rs  sum.rs  zscore.rs
src/factors/factor_struct/ops/: add.rs  div.rs  mul.rs  neg.rs  sub.rs
src/factors/map/: at_time.rs  base.rs  bias.rs  cci.rs  corr.rs  efficiency.rs  marketpl.rs  mfi.rs  mod.rs  mpl.rs  ret.rs  rsi.rs  rsrs.rs  typ.rs  vol.rs  wr.rs
src/factors/tick/: mod.rs
src/factors/tick/both/: bs_intensity.rs  cancel_rate.rs  mod.rs
src/factors/tick/future/: ask_cum_vol.rs  mod.rs  ob_slope.rs  obi.rs
src/factors/tick/order_book/: ask_cum_vol.rs  base.rs  bid_cum_vol.rs  bond_future_spread.rs  bs_pressure.rs  mid.rs  mod.rs  ob_chg_speed.rs  ob_ofi.rs  ob_reg.rs  ob_slope.rs  ob_slope_convex.rs  ob_slope_l1.rs  obi.rs  price_diff_imb.rs  shape_imb.rs  spread.rs
src/factors/tick/order_flow/: base.rs  big_order_ratio.rs  bsr.rs  mod.rs  ofi.rs  order_amt_quantile.rs  vwap.rs  vwap_deviation.rs
src/frame/: calc_fac.rs  corr.rs  evaluate.rs  frame.rs  frame_core.rs  frames.rs  frames_align.rs  join.rs  mod.rs  plot.rs
src/loader/: data_loader.rs  io.rs  kline.rs  mod.rs  noadj.rs  utils.rs
src/loader/impls/: index.rs  iter.rs
src/loader/methods/: base.rs  calc_fac.rs  concat.rs  equity_curve.rs  factors.rs  group_by.rs  join.rs  kline.rs  mod.rs  multiplier.rs  noadj.rs  spread.rs  strategy.rs  trade_data.rs
src/loader/methods/equity/: future_ret.rs  mod.rs  tick_future_ret.rs
src/loader/methods/load_kline/: future.rs  mod.rs  opt.rs  sse_bond.rs  xbond.rs
src/strategy/: core_trait.rs  mod.rs  register.rs  strategy_work.rs
src/strategy/filters/: mod.rs
src/strategy/signals/: boll.rs  fix_time.rs  macros.rs  mod.rs
src/strategy/stop_filters/: mod.rs
tea-factors/: Cargo.toml
tea-factors/src/: base.rs  core_traits.rs  export.rs  lib.rs  macros.rs  param.rs  parse.rs  prelude.rs
tea-factors/src/agg/: mod.rs
tea-factors/src/factor_struct/: agg.rs  horizontal.rs  mod.rs
tea-factors/src/factor_struct/methods/: efficiency_sign.rs  ewm.rs  imbalance.rs  is_none.rs  kurt.rs  max.rs  mean.rs  min.rs  minmax.rs  mod.rs  pct.rs  pure_vol.rs  sum.rs  vol.rs  vol_rank.rs
tea-factors/src/factor_struct/ops/: add.rs  bitand.rs  div.rs  neg.rs  not.rs  pow.rs
tea-factors/src/factors/: macros.rs  register.rs
tea-factors/src/factors/factor_struct/: agg.rs  factor.rs  horizontal.rs  mod.rs
tea-factors/src/factors/factor_struct/methods/: bias.rs  efficiency.rs  fill.rs  mean.rs  skew.rs
tea-factors/src/factors/factor_struct/ops/: bitor.rs  mod.rs  sub.rs
tea-factors/src/factors/map/: base.rs  cci.rs  dpo.rs  illiq.rs  mfi.rs  mod.rs  mpl.rs  rsi.rs  typ.rs  vol.rs
tea-factors/src/factors/tick/: mod.rs
tea-factors/src/factors/tick/both/: bs_intensity.rs  cancel_rate.rs
tea-factors/src/factors/tick/future/: base.rs  bid_cum_vol.rs  mid.rs  obi.rs  spread.rs
tea-factors/src/factors/tick/order_book/: ask_cum_vol.rs  bid_cum_vol.rs  mid.rs  mod.rs  ob_reg.rs  ob_slope_convex.rs  spread.rs
tea-factors/src/factors/tick/order_flow/: order_tier.rs  vwap_deviation.rs
tea-factors/src/map/: at_time.rs  corr.rs  rsi.rs  typ.rs  vol.rs  wr.rs
tea-factors/src/python/: agg.rs  map.rs  mod.rs
tea-factors/src/tick/both/: bs_intensity.rs  cancel_rate.rs
tea-factors/src/tick/future/: ask_cum_vol.rs  base.rs  bid_cum_vol.rs  mid.rs  ob_slope.rs  obi.rs  spread.rs
tea-factors/src/tick/order_book/: ask_cum_vol.rs  base.rs  bid_cum_vol.rs  bond_future_spread.rs  bs_pressure.rs  mid.rs  ob_chg_speed.rs  ob_ofi.rs  ob_reg.rs  ob_slope.rs  ob_slope_convex.rs  obi.rs  price_diff_imb.rs  shape_imb.rs  spread.rs
tea-factors/src/tick/order_flow/: base.rs  big_order_ratio.rs  bsr.rs  mod.rs  ofi.rs  order_amt_quantile.rs  order_tier.rs  vwap.rs  vwap_deviation.rs
tea-polars/: Cargo.toml
tea-polars/src/: expr.rs  lib.rs  polars_ext.rs  series.rs
