[package]
name = "tea-data-loader"
version = "0.1.0"
edition = "2021"

[features]
default = ["io", "fac-analyse", "tick-fac"]

serde = ["polars/serde", "polars/serde-lazy", "tea_strategy/serde"]
serde_par = []
performant = ["polars/simd", "polars/performant"]


plot = []
poloto-plot = ["plot", "dep:poloto", "poloto-chrono"]
plotlars-plot = ["plot", "dep:plotlars"]
plotly-plot = ["plot", "dep:plotly"]

io = ["serde", "bincode", "serde_par"]

# factors
fac-ext = []
fac-analyse = []                                           # 基础因子扩展方法
map-fac = ["fac-ext"]
tick-fac = ["order-book-fac", "order-flow-fac", "fac-ext"]
order-book-fac = ["fac-ext"]
order-flow-fac = ["fac-ext"]


[dependencies]
polars = { version = "0.42", features = [
    "polars-io",
    "ipc",
    "cov",
    "rolling_window",
    "dynamic_group_by",
    "abs",
    "cum_agg",
    "cumulative_eval",
    "diff",
    "log",
    "pct_change",
    "meta",
    "round_series",
    "rank",
    "propagate_nans",
    "moment",
    "dataframe_arithmetic",
] }

derive_more = { version = "1", features = [
    "from",
    "is_variant",
    "deref",
    "deref_mut",
] }
smartstring = "1"
toml = "0.8"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"
paste = "1.0"
ctor = "0.2"
regex = "1.10"
parking_lot = "0.12"
itertools = "0.13"
factor-macro = { path = "./factor-macro" }

# plot
plotly = { version = "0.9", features = ["kaleido"], optional = true }
poloto = { version = "19.1", optional = true }
poloto-chrono = { version = "0.4", optional = true }
plotlars = { version = "0.5", optional = true }

# io
bincode = { version = "1.3.3", optional = true }


# lgbm = { version = "0.0", optional = true }

[dependencies.tea_strategy]
git = "https://github.com/Teamon9161/tea_strategy.git"
branch = "master"
default-features = false
features = ['polars-lazy', "time"]
