[package]
name = "tea-data-loader"
version = "0.1.0"
edition = "2021"
# exclude = ["pyloader/**"]

[workspace]
members = ["tea-factors", "tea-polars"]
exclude = ["pyloader"]

[workspace.dependencies]
anyhow = "1.0"
polars = { version = "0.44", features = ["lazy"] }
parking_lot = "0.12"
paste = "1.0"
regex = "1.10"
ctor = "0.2"
derive_more = { version = "1", features = [
    "from",
    "is_variant",
    "deref",
    "deref_mut",
] }
# tevec = { version = "0.5", features=["polars-lazy"] }

[workspace.dependencies.tea_strategy]
git = "https://github.com/Teamon9161/tea_strategy.git"
branch = "master"
default-features = false
features = ['polars-lazy', "time"]

[features]
default = [
    "io",
    "fac-analyse",
    "tick-fac",
    "tick-future-fac",
    "map-fac",
    "plotlars-plot",
]

serde = ["polars/serde", "polars/serde-lazy", "tea_strategy/serde"]
serde_par = []
performant = ["polars/simd", "polars/performant"]

# plot
plot = []
poloto-plot = ["plot", "dep:poloto", "poloto-chrono"]
plotlars-plot = ["plot", "dep:plotlars", "plotly-plot"]
plotly-plot = ["plot", "dep:plotly"]

io = ["serde", "bincode", "serde_par"]

# factors
fac-ext = [] # 基础因子扩展方法
fac-analyse = []
map-fac = ["fac-ext"]
tick-fac = ["order-book-fac", "order-flow-fac", "fac-ext"]
tick-future-fac = ["fac-ext"]
order-book-fac = ["fac-ext"]
order-flow-fac = ["fac-ext"]

dtype-full = ["polars/dtype-full"]


[dependencies]
polars = { workspace = true, features = [
    "abs",
    "asof_join",
    "cov",
    "cum_agg",
    "cumulative_eval",
    "dataframe_arithmetic",
    "diff",
    "dynamic_group_by",
    "ipc",
    "lazy",
    "log",
    "meta",
    "moment",
    "pct_change",
    "polars-io",
    "propagate_nans",
    "rank",
    "rolling_window",
    "rolling_window_by",
    "round_series",
] }

tea-bond = { git = "https://github.com/Teamon9161/tea-bond.git", branch = "master" }
tea-polars = { path = "./tea-polars" }
tea-factors = { path = "./tea-factors" }
derive_more = { workspace = true, features = [
    "from",
    "is_variant",
    "deref",
    "deref_mut",
] }
tea_strategy = { workspace = true, features = ['polars-lazy', "time"] }
smartstring = "1"
toml = "0.8"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = {workspace = true}
rayon = "1.10"
paste = {workspace = true}
ctor = {workspace = true}
regex = {workspace = true}
parking_lot = {workspace = true}
itertools = "0.13"
factor-macro = { path = "./factor-macro" }

# plot
plotly = { version = "0.10", features = ["kaleido"], optional = true }
poloto = { version = "19.1", optional = true }
poloto-chrono = { version = "0.4", optional = true }
plotlars = { version = "0.7", optional = true }

# io
bincode = { version = "1.3.3", optional = true }

# bond

# lgbm = { version = "0.0", optional = true }

