[package]
name = "pyloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = [
    "anyhow",
    "chrono",
    "abi3-py38",
    "multiple-pymethods",
] }
tea-data-loader = { path = "../", features = ["dtype-full"] }
pyo3-polars = { version = "0.18.0", features = [
    "derive",
    "dtype-full",
    "lazy",
] }
