[package]
name = "pyloader"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = [
    "anyhow",
    "chrono",
    "abi3-py38",
    "multiple-pymethods",
] }
tea-data-loader = { path = "../", features = [
    "io",
    "fac-analyse",
    "tick-fac",
    "tick-future-fac",
    "map-fac",
    "dtype-full",
    "python",
] }
pyo3-polars = { version = "0.20", features = [
    "derive",
    "dtype-full",
    "lazy",
    "object",
] }

[features]
default = ["map-fac", "tick-fac", "tick-future-fac"]

map-fac = ["tea-data-loader/map-fac"]
tick-fac = ["tea-data-loader/tick-fac"]
tick-future-fac = ["tea-data-loader/tick-future-fac"]
order-book-fac = ["tea-data-loader/order-book-fac"]
order-flow-fac = ["tea-data-loader/order-flow-fac"]
