[project]
name = "loader"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Teamon9161", email = "1127972945@qq.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = false
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "loader.loader"
features = ["pyo3/extension-module"]
