[package]
name = "tea-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = {workspace = true, features = [
    "rolling_window",
    "rolling_window_by",
    "moment",
    "pct_change",
    "rank",
    "diff",
    "cumulative_eval",
    "cum_agg",
    "abs",
    "cov",
    "log",
    "meta",
    "round_series",
]}
anyhow = {workspace = true}
tea_strategy = {workspace = true, features = ['polars-lazy', "time"]}